--- a/project/css/style.css
+++ b/project/css/style.css
@@ -196,6 +196,7 @@ Promo section
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
     border: 1px solid #061e37;
+    object-fit: cover;
 }
 
 .promo_play {
@@ -688,6 +689,7 @@ form
     align-items: center;
     font-weight: 500;
     color: #061e37;
+    cursor: pointer;
 }
 
 .form_subs {
@@ -695,6 +697,7 @@ form
     height: 16px;
     border: solid 2px #061e37;
     margin-right: 10px;
+    cursor: pointer;
 }
 
 .form_btn {
@@ -754,4 +757,60 @@ footer
 
 .footer_links a:first-child {
     margin-left: 0;
+}
+
+/*
+popup
+ */
+
+.popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.6);
+    justify-content: center;
+    align-items: center;
+}
+
+.popup_active {
+    display: flex;
+}
+
+.popup_wrap {
+    position: relative;
+    padding: 50px;
+    background-color: #ffffff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px 0 black;
+}
+
+.popup_form {
+    margin-top: 30px;
+}
+
+.popup_close {
+    position: absolute;
+    top: 3px;
+    right: 5px;
+    font-size: 20px;
+    color: grey;
+    opacity: 0.45;
+    cursor: pointer;
+}
+
+.popup_done_text {
+    font-size: 45px;
+}
+
+.soon_popup_text {
+    font-size: 30px;
+}
+
+.soon_popup_text span {
+    opacity: 0.1;
+    display: flex;
+    justify-content: center;
 }
